Lagt til vedtekter

--- a/docs/Bedriftpresentasjoner.mdx
+++ b/docs/Bedriftpresentasjoner.mdx
@@ -1,1 +1,18 @@
-## Ta gjerne kontakt ! :)
+# Bedriftspresentasjon med Fintech
+#### Under en bedriftspresentasjon kan bedrifter presentere sin bedrift og hvorfor de har en attraktiv arbeidsplass. Det er også en fin mulighet for å bli kjent med ITØK studentene som er en del av Fintech gruppen.   
+
+En bedriftspresentasjon med oss kan se slik ut: 
+
+-  Kort presentasjon av bedriften.  
+
+-  Gjennomgang av ulike prosjekter bedriften har holdt på med den siste tiden og presentere.  
+
+- Mingling hvor studentene har mulighet til å få i seg noe mat og drikke og samtidig bli kjent med de ansatte.  
+###
+
+###
+#### Hva kan bedriften forvente av oss? 
+
+- Stor interesse og gode spørsmål til deres bedrift  
+
+- God kompetanse innenfor både teknologi og finans  
