--- a/docs/Vedtekter.mdx
+++ b/docs/Vedtekter.mdx
@@ -1,9 +1,64 @@
-## §1. Navn
+## §1 – Formål 
 
-## §2. Formål
+Fintech Enigma har 2 hovedformål:  
+1. Forvalte Enigma sine oppsparte midler på en hensiktsmessig måte og i Enigmas beste interesse. 
+2. Utvikle teknologi for å oppnå best mulig avkastning på investeringer. 
 
-## §3. Medlemmer
+## §2 – Sammensetning 
+Fintech Enigma er en interessegruppe underlagt Enigma, linjeforeningen for masterstudentene ved linjen Informasjonsteknologi og Økonomi (ITØK) ved Universitetet i Bergen. Vi skiller mellom linjeforening for ITØK, «Enigma» og Fintech Enigma. Gruppen består av 2 undergrupper som tjener formålene jf. §1, forvaltningsgruppen og utviklergruppen. Hovedstyret (heretter referert til som HS) i Fintech Enigma består av en leder, porteføljeansvarlig og utvikleransvarlig.
 
-## ...
+### §2.1 - Forvaltningsgruppen 
+Forvaltningsgruppen forvalter Enigma sine oppsparte midler i de finansielle aktiva som gruppen bestemmer. Gruppen har en porteføljeansvarlig som er overordnet ansvarlig for Fintech Enigma sine midler. Forvaltergruppen møtes annenhver uke for å diskutere fondets portefølje. I spesielle situasjoner vil det kunne være nødvendig med hyppigere møter, slik at midlene forvaltes forsvarlig. Medlemmer i forvaltningsgruppen forplikter seg til å delta aktivt på møter.
 
-## §N. ...
+### §2.2 - Utviklergruppen 
+Utviklergruppen står for utvikling av tradingalgoritmer og er hovedansvarlig for utvikling og vedlikehold av Fintech Enigma sin nettside fintechenigma.no. Gruppen har en utvikleransvarlig som er overordnet ansvarlig for nettside, samt måten teknologi brukes for å forbedre Forvaltningsgruppens investeringer. Medlemmer i utviklergruppen forplikter seg til å delta aktivt på møter. 
+
+### §2.3 - Stillinger 
+Fintech Enigma har et hovedstyre som er ansvarlig for daglig drift av gruppen. HS skal minimum bestå av følgende stillinger: 
+- Leder – har overordnet ansvar for Fintech Enigma. 
+- Porteføljeansvarlig – ansvarlig for forvaltningsgruppen og økonomistyring i Fintech Enigma. 
+- Utviklingsansvarlig – ansvarlig for utviklergruppen. 
+- Sekretær – ansvarlig for at møter går for seg på en god måte. Sekretæren skriver referat for møter og setter agenda på forhånd. 
+
+## §3 – Medlemmer 
+Alle studenter ved linjen ITØK på UiB kan bli medlemmer av Fintech Enigma. For å bli medlem kreves det en formell påmelding til HS. Det er ikke kontingent. Medlemmer forplikter seg til å delta aktivt på møter. Medlemmer velger selv om de vil involvere seg i forvaltningsgruppen eller utviklergruppen eller begge.
+
+## §4 – Økonomi  
+Porteføljeansvarlig er ansvarlig for økonomien til Fintech Enigma. Fintech Enigma forvalter Enigma sine oppsparte midler på vilkår som porteføljeansvarlig i Fintech Enigma og økonomiansvarlig i Enigma blir enige om.  
+
+### §4.1 – Inntekter 
+Fintech Enigma sine inntekter fra Sponsoravtaler, bedriftspresentasjoner o.l. skal inn i fondet som forvaltningsgruppen forvalter, ved mindre annet avtales av HS og økonomiansvarlig i Enigma. 
+
+I tillegg vil 25% av alle Enigmas inntekter bli spart i Fintech Enigma sitt fond. 
+
+### §4.2 – Fondets forvaltning av midler 
+Denne vedtekten gjelder midler som kommer fra inntekter direkte til Fintech Enigma, jf. §4.1 og oppsparte midler fra Enigma. Pengene forvaltes i en portefølje bestående av Aksjer, fond, obligasjoner og andre verdipapir. Fondets posisjoner blir bestemt ved flertall i forvaltningsgruppen. Porteføljeansvarlig har vetorett på verdipapirer den mener er uansvarlige og urimelige. Dersom en investering/posisjon er av Enigma sine oppsparte midler, har økonomiansvarlig fra Enigma vetorett.  
+
+### §4.3 – Utgifter 
+Dersom det skal tas ut penger fra fondet, må porteføljeansvarlig få skriftlig beskjed senest 3 uker i forveien. Dette er for å hindre at fondet realiserer eventuelle unødvendige tap.  
+
+## §5 – Generalforsamling 
+Generalforsamling avholdes en gang hvert år, i høstmånedene. HS skal kalle inn til generalforsamling senest 14 dager i forkant. Kun Fintech Enigmas medlemmer er invitert til å delta på generalforsamlingen. 
+
+### § 5.1 - Generalforsamlingens innhold 
+Under generalforsamlingen skal det først foreligge en orientering om hvordan Fintech Enigma har gjort det i foregående år med tanke på økonomi, arrangementer og bedriftspresentasjoner.  
+
+Det skal føres referat fra generalforsamlingen med underskrifter fra alle nye valgte styremedlemmer som verifiseres med leders signatur.  
+
+### § 5.2 - Ekstraordinær generalforsamling 
+Dersom det anses nødvendig, kan det kalles inn til en ekstraordinær generalforsamling i forskrift med ovenstående paragrafer. 
+
+## §6 – Avskjediget av styremedlemmer 
+Dersom et styremedlem ikke gjør oppgavene som er rimelig å forvente av stillingen, skal de øvrige medlemmene stemme over hvorvidt det skal sendes en advarsel eller ikke. Flertallets valg avgjør utfallet. 
+
+Dersom vedkommende fortsatt ikke gjør det som kreves etter at varsel er gitt, skal det bli innkalt til ekstraordinært styremøte, hvor problemet blir lagt frem. Medlemmene stemmer om personen kan fortsette i styret eller ei. Flertallets valg avgjør utfallet. Dersom advarsel gjelder leder, og avstemningen er uavgjort er nestleders stemme avgjørende for utfallet. 
+### §6.1 – Styremedlem sier opp  
+Dersom et styremedlem velger å avgå, plikter vedkommende til å gi beskjed minst én måned i forkant. I dette tilfellet vil det kalles inn til en ekstraordinær generalforsamling hvor et nytt styremedlem vil bli valgt.  
+
+## § 7 – Endring av vedtekter  
+Endring av vedtekter kan kun skje ved ordinær eller ekstraordinær generalforsamling. Her kreves det 2⁄3 flertall av avgitte stemmer for å få utført en endring.  
+§8 kan ikke endres. 
+
+## §8 – Oppløsning  
+Oppløsning av Fintech Enigma kan kun behandles på ordinært styremøte. Blir oppløsning vedtatt med minst 2⁄3 flertall, blir det kalt inn til ekstraordinær generalforsamling 1 måned senere. På generalforsamlingen må det være minst 2/3 flertall for at oppløsningen skal bli vedtatt. 
+
