--- a/docs/Hovedstyret.mdx
+++ b/docs/Hovedstyret.mdx
@@ -1,1 +1,5 @@
 ## Styret 2022/23
+#### Leder: Edvard Bae Mysen
+#### Portoføljeansvarlig: Oscar Bretteville
+#### Utviklingsansvarlig: Nathaniel Stensen
+#### Sekretær: Mirella Brodschöll
