--- a/docs/Hovedstyret.mdx
+++ b/docs/Hovedstyret.mdx
@@ -1,5 +1,9 @@
 ## Styret 2022/23
-#### Leder: Edvard Bae Mysen
-#### Portoføljeansvarlig: Oscar Bretteville
-#### Utviklingsansvarlig: Nathaniel Stensen
-#### Sekretær: Mirella Brodschöll
+
+> Leder: [Edvard Bae Mysen](mailto:edsabamy@gmail.com)
+
+> Porteføljeansvarlig: [Oscar Bretteville](mailto:oscar.bretteville@gmail.com)
+
+> Utviklingsansvarlig: [Nathaniel Stensen](mailto:nathsten03@gmail.com)
+
+> Sekretær: Mirella Brodschöll
