--- a/docs/Bli_med_i_Fintech.mdx
+++ b/docs/Bli_med_i_Fintech.mdx
@@ -1,6 +1,7 @@
-# Bli med i Fintech!
-### Vi er studenter fra ITØK-studiet ved UiB med interesse for aksjemarkedet. Gruppen er delt inn i to grupper, en akjseforvaltningsgruppe og en utviklergruppe.  
+# Bli med i Fintech Enigma!
 
-#### Forvaltningsgruppen har fokus på forvaltning og valg av investeringer. Fintch skal komplementere økonomien til Enigma ved å gi muligheten til å gjøre investeringer som ikke er en del av Enigmas budsjett. Målet er å velge trygge investeringer som linjeforeningen kan tjene på langsiktig. Vi har jevnlig møter hvor vi diskuterer fondssammensetningen i vårt egne Fintech fond i DNs Fantasyfond.  
+Vi er studenter fra [ITØK-studiet](https://www.uib.no/studier/MASV-IT%C3%98K) ved UiB med interesse for aksjemarkedet. Gruppen er delt inn i to grupper, en akjseforvaltningsgruppe og en utviklergruppe.  
 
-#### Utviklergruppens hovedoppgave er å drifte og videreutvikle Fintechs webløsninger, samt utvikle tradingalgoritmer. 
+Forvaltningsgruppen har fokus på forvaltning og valg av investeringer. Fintch skal komplementere økonomien til Enigma ved å gi muligheten til å gjøre investeringer som ikke er en del av Enigmas budsjett. Målet er å velge trygge investeringer som linjeforeningen kan tjene på langsiktig. Vi har jevnlig møter hvor vi diskuterer fondssammensetningen i vårt egne Fintech fond i DNs Fantasyfond.  
+
+Utviklergruppens hovedoppgave er å drifte og videreutvikle Fintechs webløsninger, samt utvikle tradingalgoritmer. 
