--- a/docs/Bedriftpresentasjoner.mdx
+++ b/docs/Bedriftpresentasjoner.mdx
@@ -1,4 +1,4 @@
-# Bedriftspresentasjon med Fintech Enigma
+# Bedriftspresentasjon med Enigma
 Under en bedriftspresentasjon kan bedrifter presentere sin bedrift og hvorfor de har en attraktiv arbeidsplass. Det er også en fin mulighet for å bli kjent med ITØK studentene som er en del av Fintech gruppen.   
 
 En bedriftspresentasjon med oss kan se slik ut: 
