for studenter/bedrift

--- a/docs/Bedriftpresentasjoner.mdx
+++ b/docs/Bedriftpresentasjoner.mdx
@@ -1,18 +1,18 @@
 # Bedriftspresentasjon med Enigma
-Under en bedriftspresentasjon kan bedrifter presentere sin bedrift og hvorfor de har en attraktiv arbeidsplass. Det er også en fin mulighet for å bli kjent med ITØK studentene som er en del av Fintech gruppen.   
+En bedriftspresentasjon er en mulighet for din bedrift å presentere seg selv, deres prosjekter og arbeidsplass. Det er også en gylden mulighet for dere å bli bedre kjent med ITØK-studentene som er en del av fintech-gruppen.   
 
 En bedriftspresentasjon med oss kan se slik ut: 
 
 -  Kort presentasjon av bedriften.  
 
--  Gjennomgang av ulike prosjekter bedriften har holdt på med den siste tiden og presentere.  
+-  Gjennomgang av ulike prosjekter bedriften har holdt på med den siste tiden.  
 
-- Mingling hvor studentene har mulighet til å få i seg noe mat og drikke og samtidig bli kjent med de ansatte.  
+-  Mingling med mat og drikke hvor studentene har mulighet til å bli kjent med de ansatte.  
 ###
 
 ###
-#### Hva kan bedriften forvente av oss? 
+#### Hva kan din bedrift forvente av oss? 
 
-- Stor interesse og gode spørsmål til deres bedrift  
+- Stor interesse og gode relevante spørsmål til deres bedrift og prosjekter.  
 
-- God kompetanse innenfor både teknologi og finans  
+- God kompetanse innenfor både teknologi og finans. 
