--- a/docs/Bli_med_i_Fintech.mdx
+++ b/docs/Bli_med_i_Fintech.mdx
@@ -1,7 +1,7 @@
 # Bli med i Fintech Enigma!
 
-Vi er studenter fra [ITØK-studiet](https://www.uib.no/studier/MASV-IT%C3%98K) ved UiB med interesse for aksjemarkedet. Gruppen er delt inn i to grupper, en akjseforvaltningsgruppe og en utviklergruppe.  
+Vi er en gruppe studenter fra [ITØK-studiet](https://www.uib.no/studier/MASV-IT%C3%98K) ved UiB med stor interesse for skjæringsfeltet mellom finans og teknologi. Gruppen er delt inn i to grupper, en akjseforvaltningsgruppe og en utviklergruppe.  
 
-Forvaltningsgruppen har fokus på forvaltning og valg av investeringer. Fintch skal komplementere økonomien til Enigma ved å gi muligheten til å gjøre investeringer som ikke er en del av Enigmas budsjett. Målet er å velge trygge investeringer som linjeforeningen kan tjene på langsiktig. Vi har jevnlig møter hvor vi diskuterer fondssammensetningen i vårt egne Fintech fond i DNs Fantasyfond.  
+Forvaltningsgruppen har fokus på forvaltning og valg av investeringer. Forvaltningsgruppen skal forvalte sparepengene til linjeforeningen Enigma. Målet er å velge trygge og gode investeringer som vil gi avkastning på lang sikt. Vi har jevnlig møter hvor vi diskuterer fondssammensetningen i vårt eget  fond.  
 
 Utviklergruppens hovedoppgave er å drifte og videreutvikle Fintechs webløsninger, samt utvikle tradingalgoritmer. 
