--- a/docs/Styret 2023 2024.mdx
+++ b/docs/Styret 2023 2024.mdx
@@ -1,12 +1,18 @@
-## Styret 2022/23
+
 
 import parse from 'html-react-parser'
 import styles from './css/HovedStyret.module.css'
 
+export const Header = ({children}) => {
+    return (
+        <h1 className={styles.header}>{children}</h1>
+    )
+}
+
 export const Ledere = [
     {
         name: "Edvard Sander Bae Mysen",
-        title: "Leder for utvikling",
+        title: "Leder",
         img: "https://media.licdn.com/dms/image/C4D03AQE0Hu4qnr8vWw/profile-displayphoto-shrink_400_400/0/1663233790967?e=1684368000&v=beta&t=xur5u5n4EWE8gv5cXCaAMBpE9_594w-loygRRG-19UY",
         link: "https://www.linkedin.com/in/edvard-sander-bae-mysen-873a661bb/"
     },
@@ -21,8 +27,11 @@ export const Ledere = [
         title: "Leder for porteføljeforvaltning",
         img: "https://media.licdn.com/dms/image/C4D03AQFJQODM17V1dg/profile-displayphoto-shrink_800_800/0/1658767173413?e=1684368000&v=beta&t=z-G16RFrSvEfn7IdHp61tWi09fvh7L6gKMBQ9kfEfIE",
         link: "https://www.linkedin.com/in/oscar-bretteville-2384941a1/"
-    },
-        {
+    }
+]
+
+export const Ansate = [
+    {
         name: "Mirella Brodschöll",
         title: "Sekretær",
         img: "https://media.licdn.com/dms/image/D4E03AQG7S4ezVm6A6Q/profile-displayphoto-shrink_400_400/0/1669587331393?e=1684368000&v=beta&t=_x9Rj6ZGwlBd59_5FZIzqmKP8YvJLNXqHzPeQO2OxSI",
@@ -51,4 +60,22 @@ export const LederDiv = ({children}) => {
     )
 }
 
+export const AnsatteDiv = ({children}) => {
+    return (
+        <div className={styles.lederDiv}>
+            {Ansate.map( (props, idx) => (<LederBilder key={idx} {...props}/>) )}
+        </div>
+    )
+}
+
+<!-- Markdown -->
+
+<Header>Ledelsen</Header>
+<hr/>
 <LederDiv />
+
+<br/>
+
+<Header>Ansvarlige</Header>
+<hr/>
+<AnsatteDiv />
