--- a/docs/Bli_med_i_Fintech.mdx
+++ b/docs/Bli_med_i_Fintech.mdx
@@ -4,4 +4,4 @@ Vi er en gruppe studenter fra [ITØK-studiet](https://www.uib.no/studier/MASV-IT
 
 Forvaltningsgruppen har fokus på forvaltning og valg av investeringer. Forvaltningsgruppen skal forvalte sparepengene til linjeforeningen Enigma. Målet er å velge trygge og gode investeringer som vil gi avkastning på lang sikt. Vi har jevnlig møter hvor vi diskuterer fondssammensetningen i vårt eget  fond.  
 
-Utviklergruppens hovedoppgave er å drifte og videreutvikle Fintechs webløsninger, samt utvikle tradingalgoritmer. 
+Utviklergruppens hovedoppgave er å drifte og videreutvikle Fintechs webløsninger, samt teste, utforske og utvikle tradingalgoritmer. 
