Fikset theme og laget template

--- a/docs/Kontakt_oss.mdx
+++ b/docs/Kontakt_oss.mdx
@@ -1,2 +1,7 @@
 # Kontakt oss
-### E-post: fintechenigma@gmail.com
+
+<h3 style={{"font-weight": "400"}}>Vi er å kontakte på mail:</h3>
+
+<h4 style={{"font-weight": "400"}}>E-post: <a href="mailto:fintechenigma@gmail.com" style={{color: "#06ADF4"}}>fintechenigma@gmail.com</a></h4>
+
+Eventuelt ta direkte kontakt med noen i ledelsen. 
