Skrevet om forvaltning og FF

--- a/docs/Fintech Enigma Fantacy Fond.mdx
+++ b/docs/Fintech Enigma Fantacy Fond.mdx
@@ -84,9 +84,11 @@ export const LineGraf = () => {
 
 ### Headline
 
-Gjennom oktober og november konurerte vi i DN sitt <a style={{color: "#06ADF4"}} href={'https://investor.dn.no/#!/Fantasyfond/Profil/100593'}>Fantasy Fond</a>
+Gjennom oktober og november konkurrerte vi i DN sitt <a style={{color: "#06ADF4"}} href={'https://investor.dn.no/#!/Fantasyfond/Profil/100593'}>Fantasy Fond</a>.
 
-Dette var proteføljen vår.
+Dette var starten på Fintech sin forvaltningsgruppe, der vi satte sammen vårt første fond mens bedriftskontoen ble opprettet. 
+
+Dette var porteføljen vår:
 
 - NORDIC SEMICONDUCTOR
 - CADELER A/S
