--- a/docs/Kontakt_oss.mdx
+++ b/docs/Kontakt_oss.mdx
@@ -4,4 +4,4 @@
 
 <h4 style={{"font-weight": "400"}}>E-post: <a href="mailto:fintechenigma@gmail.com" style={{color: "#06ADF4"}}>fintechenigma@gmail.com</a></h4>
 
-Eventuelt ta direkte kontakt med noen i ledelsen. 
+Dere kan også gjerne ta kontakt direkte med noen i ledelsen.
