--- a/docs/Fondsforvaltning og Algoritmisk trading.mdx
+++ b/docs/Fondsforvaltning og Algoritmisk trading.mdx
@@ -5,5 +5,8 @@ export const Trading = () => {
 }
 
 
-### Dette driver vi med
-<Trading />
+## Fondsforvaltning
+Fintech Enigma har et eget fond der vi forvalter linjeforeningen Enigma sine sparepenger. Det er forvaltningsgruppen som er ansvarlig for fondets utvikling. Vi møtes jevnlig for å diskutere posisjonene våres med et mål om stabil og god avkastning på sikt.
+
+## Algoritmisk Trading
+Utviklergruppen vår møtes ukentlig og utvikler tradingalgoritmer og bots. Dette blir gjort i flere programmeringspråk på platformer som blant annet MetaTrader 4 og Alpaca Markets. Målet for hver algoritme/bot er at de skal kunne operere på egenhånd og være et hjelpemiddel for forvaltningsgruppen. Trykk [her](./Alogritmeportefølje.mdx) for å se våre algoritmer.
