Tatt fekk partner og fikset folk

--- a/docs/Fintech Enigma Fantacy Fond.mdx
+++ b/docs/Fintech Enigma Fantacy Fond.mdx
@@ -81,6 +81,8 @@ Gjennom oktober og november konkurrerte vi i DN sitt <a style={{color: "#06ADF4"
 
 Dette var starten på Fintech sin forvaltningsgruppe, der vi satte sammen vårt første fond mens bedriftskontoen ble opprettet. 
 
+Hver høst arrangerer vi en konkuranse mellom medlemmene i <a style={{color: "#06ADF4"}} href={'https://investor.dn.no/#!/Fantasyfond/Liga/971'}>Fintech Enigma Fantasy Liga🤑🤑</a>.
+
 Dette var porteføljen vår:
 
 - NORDIC SEMICONDUCTOR
