--- a/docs/Grunnleggere.mdx
+++ b/docs/Grunnleggere.mdx
@@ -32,8 +32,8 @@ export const FolkDiv = ({children, folk}) => {
 
 <!-- Markdown -->
 
-Fintech Enigma ble startet høsten 2022 av de tre førsteårs studentene Edvard Mysen, Ocar Brettville og Nathaniel Stensen.
-Motivasjonen bak grunnleggelsen var en felles interesse for fintech og en driv om å øke kjenskapen til ITØK studiet. 
+Fintech Enigma ble startet høsten 2022 av de tre førsteårs studentene Edvard Mysen, Oscar Bretteville og Nathaniel Stensen.
+Motivasjonen bak grunnleggelsen var en felles interesse for fintech og en driv om å øke kjennskapen til ITØK studiet. 
 
 <Header>Grunnleggerne av Fintech Enigma</Header>
 <hr />
