--- a/docs/Algoritmeportefolje.mdx
+++ b/docs/Algoritmeportefolje.mdx
@@ -5,7 +5,7 @@
 import styles from './css/algos.module.css';
 
 <p className={styles.p}>
-    Denne algoritmen bruper API: yfinance for å hente inn informasjon i sanntid fra Yahoo Finance. Algoritmen henter 
+    Denne algoritmen bruker API: yfinance for å hente inn informasjon i sanntid fra Yahoo Finance. Algoritmen henter 
 RSI-verdiene fra utvalgte aksjer og sorterer hvilke som har best verdi. Sluttproduktet er en liste med hvilke
 aksjer med best RSI, og gir kjøpssignal dersom verdien er under en utvalgt verdi. 
 </p>
