Fikset flere skrivefeil

--- a/docs/Fintech Enigma Fantacy Fond.mdx
+++ b/docs/Fintech Enigma Fantacy Fond.mdx
@@ -1,3 +1,4 @@
+# Fintech Enigma Fantasyfond
 
 import { useState, useEffect } from 'react';
 import axios from 'axios';
@@ -77,11 +78,11 @@ export const LineGraf = () => {
 
 ### Headline
 
-Gjennom oktober og november konkurrerte vi i DN sitt <a style={{color: "#06ADF4"}} href={'https://investor.dn.no/#!/Fantasyfond/Profil/100593'}>Fantasy Fond</a>.
+Gjennom oktober og november konkurrerte vi i DN sitt <a style={{color: "#06ADF4"}} href={'https://investor.dn.no/#!/Fantasyfond/Profil/100593'}>Fantasyfond</a>.
 
 Dette var starten på Fintech sin forvaltningsgruppe, der vi satte sammen vårt første fond mens bedriftskontoen ble opprettet. 
 
-Hver høst arrangerer vi en konkuranse mellom medlemmene i <a style={{color: "#06ADF4"}} href={'https://investor.dn.no/#!/Fantasyfond/Liga/971'}>Fintech Enigma Fantasy Liga🤑🤑</a>.
+Hver høst arrangerer vi en konkuranse mellom medlemmene i <a style={{color: "#06ADF4"}} href={'https://investor.dn.no/#!/Fantasyfond/Liga/971'}>Fintech Enigma Fantasyliga🤑🤑</a>.
 
 Dette var porteføljen vår:
 
