--- a/docs/Grunnleggere.mdx
+++ b/docs/Grunnleggere.mdx
@@ -33,7 +33,7 @@ export const FolkDiv = ({children, folk}) => {
 <!-- Markdown -->
 
 Fintech Enigma ble startet høsten 2022 av de tre førsteårs studentene Edvard Mysen, Oscar Bretteville og Nathaniel Stensen.
-Motivasjonen bak grunnleggelsen var en felles interesse for fintech og en driv om å øke kjennskapen til ITØK studiet. 
+Motivasjonen bak grunnleggingen var en felles interesse for fintech og et driv om å øke kjennskapen til ITØK studiet. 
 
 <Header>Grunnleggerne av Fintech Enigma</Header>
 <hr />
