--- a/docs/Algoritmeportefolje.mdx
+++ b/docs/Algoritmeportefolje.mdx
@@ -1,13 +1,13 @@
 # Algoritmeportefølje
 
-## RSI - algoritme
+## RSI-algoritme
 
 import styles from './css/algos.module.css';
 
 <p className={styles.p}>
     Denne algoritmen bruker API: yfinance for å hente inn informasjon i sanntid fra Yahoo Finance. Algoritmen henter 
 RSI-verdiene fra utvalgte aksjer og sorterer hvilke som har best verdi. Sluttproduktet er en liste med hvilke
-aksjer med best RSI, og gir kjøpssignal dersom verdien er under en utvalgt verdi. 
+som har best RSI, og gir kjøpssignal dersom verdien er under en utvalgt verdi. 
 </p>
 
 <ul className={styles.ul}>
@@ -15,7 +15,7 @@ aksjer med best RSI, og gir kjøpssignal dersom verdien er under en utvalgt verd
 </ul>
 
 
-## Teknisk Nivå - algoritme
+## Teknisk Nivå-algoritme
 
 Dette er primært en videreutvikling av RSI-algoritmen. Denne algoritmen henter inn info om RSI, Stochastic, MACD, ADX
 og SMA 20, 50, 100 og 200 fra Yahoo Finance. Videre gir den en poengsum for hver av de tekniske nivåene, summerer
