Fikset blir med i FE

--- a/docs/Bli_med_i_Fintech.mdx
+++ b/docs/Bli_med_i_Fintech.mdx
@@ -1,7 +1,26 @@
 # Bli med i Fintech Enigma!
+import styles from './css/blimedlem.module.css';
 
-Vi er en gruppe studenter fra [ITØK-studiet](https://www.uib.no/studier/MASV-IT%C3%98K) ved UiB med stor interesse for skjæringsfeltet mellom finans og teknologi. Gruppen er delt inn i to grupper, en akjseforvaltningsgruppe og en utviklergruppe.  
+Er du student på ITØK eller vurderer å søke ITØK?
 
-Forvaltningsgruppen har fokus på forvaltning og valg av investeringer. Forvaltningsgruppen skal forvalte sparepengene til linjeforeningen Enigma. Målet er å velge trygge og gode investeringer som vil gi avkastning på lang sikt. Vi har jevnlig møter hvor vi diskuterer fondssammensetningen i vårt eget  fond.  
+Vi er en interessegruppe for studenter ved sivilingeniørstudiet  <a style={{color: "#06ADF4"}} href={'https://www.uib.no/studier/MASV-IT%C3%98K'}>ITØK</a> som bruker det vi lærer for å få sparepengene til <a style={{color: "#06ADF4"}} href={'https://www.instagram.com/enigma.uib/'}>ENIGMA</a> til å vokse. Er du interessert i finans og teknologi? Da er Fintech Enigma noe for deg!
 
-Utviklergruppens hovedoppgave er å drifte og videreutvikle Fintechs webløsninger, samt teste, utforske og utvikle tradingalgoritmer. 
+Dette kan du gjøre som medlem i Fintech Enigma:
+<ul className={styles.bot}>
+    <li>Utvikle tradingalgoritmer </li>
+</ul>
+<ul className={styles.chart}>
+  <li>Forvalte <a style={{color: "#06ADF4"}} href={'https://shareville.no/profiles/fintech-enigma/portfolios/610411'}>Fintech Enigma-fondet</a></li>
+</ul>
+<ul className={styles.mac}>
+  <li>Utvikle og vedlikeholde nettsiden vår</li>
+</ul>
+<ul className={styles.handshake}>
+    <li>Komme i kontakt med spennende bedrifter på bedriftspresentasjoner og workshops</li>
+</ul>
+
+
+
+
+
+
