Endret lenken på siste bloggfil til fondet sin side

--- a/blog/2023-03-28-Fondet er i gang.mdx
+++ b/blog/2023-03-28-Fondet er i gang.mdx
@@ -12,4 +12,4 @@ Etter dagens møte har forvaltningsgruppen bestemt sammensetningen av vår førs
 - EUROPRIS
 - CRAYON
 
-Disse investeringene er gjort med lang tidshorisont der vi er spesielt vektet i utbytteaksjene. <a style={{color: "#06ADF4"}} href={'https://shareville.no/profiles/fintech-enigma/portfolios/610411'}>Her</a> kan du følge oss på Shareville. 
+Disse investeringene er gjort med lang tidshorisont der vi er spesielt vektet i utbytteaksjene. <a style={{color: "#06ADF4"}} href={'https://www.fintechenigma.no/docs/Nordnetportefolje'}>Her</a> kan du følge porteføljen vår. 
